--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+noja<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -47,7 +47,7 @@
     <!-- Header / Navigation -->
     <header class="bg-black/50 backdrop-blur-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-gradient">Alex Doe</a>
+            <a href="#" class="text-2xl font-bold text-gradient">James Onoja</a>
             <div class="hidden md:flex space-x-6 items-center">
                 <a href="#skills" class="text-slate-300 hover:text-white transition duration-300">Skills</a>
                 <a href="#portfolio" class="text-slate-300 hover:text-white transition duration-300">Portfolio</a>
@@ -74,7 +74,7 @@
         <!-- Hero Section -->
         <section class="text-center min-h-[60vh] flex flex-col items-center justify-center">
             <div class="w-24 h-24 mb-6 rounded-full bg-slate-800 border-2 border-indigo-500 shadow-lg">
-                <img src="https://placehold.co/96x96/1e293b/4f46e5?text=AD" alt="Alex Doe" class="w-full h-full rounded-full object-cover">
+                <img src="https://placehold.co/96x96/1e293b/4f46e5?text=AD" alt="James Onoja" class="w-full h-full rounded-full object-cover">
             </div>
             <h1 class="text-4xl md:text-6xl font-extrabold text-white tracking-tight">
                 Senior Salesforce Administrator
