--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ noja<!DOCTYPE html>
              <div class="max-w-2xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">Let's Build Something Great</h2>
                 <p class="mt-4 text-slate-400">Have a project in mind or just want to connect? Feel free to reach out.</p>
-                <a href="mailto:alex.doe@example.com" class="mt-8 inline-block px-10 py-4 bg-indigo-600 text-white font-bold rounded-lg hover:bg-indigo-700 transition-all duration-300 shadow-xl shadow-indigo-600/30 transform hover:scale-105">
-                    alex.doe@example.com
+                <a href="mailto:James.onoja@skenky.com" class="mt-8 inline-block px-10 py-4 bg-indigo-600 text-white font-bold rounded-lg hover:bg-indigo-700 transition-all duration-300 shadow-xl shadow-indigo-600/30 transform hover:scale-105">
+                    James.onoja@skenky.com
                 </a>
                 <div class="mt-10 flex justify-center space-x-6">
                     <a href="#" class="text-slate-400 hover:text-white transition-colors">LinkedIn</a>
@@ -225,7 +225,7 @@ noja<!DOCTYPE html>
 
     <!-- Footer -->
     <footer class="text-center py-8 mt-16 border-t border-slate-800">
-        <p class="text-slate-500">&copy; 2024 Alex Doe. All rights reserved.</p>
+        <p class="text-slate-500">&copy; 2024 James Onoja. All rights reserved.</p>
     </footer>
 
     <!-- Custom JavaScript for interactivity -->
